feat: enhance CSS layout with float adjustments and margin for title image

--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -12,22 +12,29 @@ body {
 
 h1 {
   font-size: 5rem;
-  clear: both;
 }
 
 footer {
   text-align: right;
   color: midnightblue;
-  clear: both;
 }
 
 .title-image {
   height: 50px;
   width: 50px;
   float: left;
+  margin-right: 50px;
 }
 
 .left {
-  ;
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.card {
+  width: 45%;
 }
 
